# ghcn-showcases

./: .gitmodules  README.md  daily2dailystatics.py  daily2monthly.py  data_quality.py  merge.py  plotdaily.py  plotmonthly.py  process.py  pyproject.toml  stats_processor.py
docs/: index.html  matched_stations.geojson
docs/css/: base.css  comparison.css
docs/js/: chart.js  comparison.js  config.js  language.js  map.js  popup.js  station.js
docs/plots/: CHM00045004-daily.csv  CHM00045005-daily.csv  CHM00050434-monthly.csv  CHM00050527-daily.csv  CHM00050527-monthly.csv  CHM00050557-daily.csv  CHM00050557-monthly.csv  CHM00050564-monthly.csv  CHM00050632-daily.csv  CHM00050658-daily.csv  CHM00050658-monthly.csv  CHM00050727-daily.csv  CHM00050727-monthly.csv  CHM00050745-daily.csv  CHM00050756-monthly.csv  CHM00050788-daily.csv  CHM00050788-monthly.csv  CHM00050854-daily.csv  CHM00050915-monthly.csv  CHM00050949-daily.csv  CHM00050949-monthly.csv  CHM00050953-daily.csv  CHM00050953-monthly.csv  CHM00050963-daily.csv  CHM00050963-monthly.csv  CHM00050968-daily.csv  CHM00050978-daily.csv  CHM00050978-monthly.csv  CHM00051076-daily.csv  CHM00051087-daily.csv  CHM00051087-monthly.csv  CHM00051156-daily.csv  CHM00051156-monthly.csv  CHM00051334-daily.csv  CHM00051334-monthly.csv  CHM00051379-daily.csv  CHM00051379-monthly.csv  CHM00051431-daily.csv  CHM00051431-monthly.csv  CHM00051644-daily.csv  (+680 more)
docs/plots/CHM/CHM00045004/: CHM00045004-daily.csv  CHM00045004-monthly-history.csv  CHM00045004-monthly-stats.json  CHM00045004-monthly.csv
(+4539 files in other folders)
